--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,3 +1,3 @@
-- title: "No lectures available yet"
-  filename: ""
-  description: "Stay tuned..."
+- title: "Lecture 1"
+  filename: "lecture1.pdf"
+  description: "Philosophy and basic notions"
