--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -10,3 +10,6 @@
 - title: "Lecture 4"
   filename: "lecture4.pdf"
   description: "Galois extensions"
+- title: "Lecture 5"
+  filename: "lecture5.pdf"
+  description: "Transcendence bases, and Pell's equation I"
