--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -13,3 +13,23 @@
 - title: "Lecture 5"
   filename: "lecture5.pdf"
   description: "Transcendence bases, and Pell's equation I"
+- title: "Lecture 6"
+  filename: "lecture6.pdf"
+  description: "Extensions and the revenge of Pell's equation"
+- title: "Lecture 7"
+  filename: "lecture7.pdf"
+  description: "Profinite Galois theory"
+- title: "Lecture 8"
+  filename: "lecture8.pdf"
+  description: "Galois Cohomology"
+- title: "Lecture 9"
+  filename: "lecture9.pdf"
+  description: "The idea of the Brauer-Manin obstruction"
+- title: "Lecture 10"
+  filename: "lecture10.pdf"
+  description: "Brauer-Manin obstructions, part 2: the structure of the
+  Brauer group"
+- title: "Lecture 11"
+  filename: "lecture11.pdf"
+  description: "Brauer-Manin obstructions, part 3: computing the
+  Brauer group of varieties"
